--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -250,6 +250,7 @@ body {
   background-color: #4f36e8;
   display: flex;
   justify-content: center;
+  height: 100%;
 }
 
 h1 {
@@ -312,12 +313,14 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 8vh 0;
+  margin: 0;
 }
 @media screen and (max-width: 768px) {
   .container {
+    min-width: unset;
     flex-direction: column;
     margin: 64px 0;
+    padding: 0 10vw;
   }
   .container h1 {
     margin-bottom: 32px;
@@ -386,7 +389,7 @@ footer i {
   footer {
     flex-direction: column-reverse;
     text-align: center;
-    max-width: 80%;
+    padding: 0 10vw;
   }
   footer p {
     margin-top: 0px;
