--- a/src/styles/sass/styles.scss
+++ b/src/styles/sass/styles.scss
@@ -17,6 +17,7 @@ body {
     background-color: $main-blue;
     display: flex;
     justify-content: center;
+    height: 100%;
 }
 
 h1 {
@@ -85,12 +86,14 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 8vh 0;
+    margin: 0;
 
     @media screen and (max-width: 768px) {
         & {
+            min-width: unset;
             flex-direction: column;
             margin: $spacing--lg 0;
+            padding: 0 10vw;
 
             h1 {
                 margin-bottom: $spacing--md;
@@ -154,7 +157,7 @@ footer {
         & {
             flex-direction: column-reverse;
             text-align: center;
-            max-width: 80%;
+            padding: 0 10vw;
     
             p {
                 margin-top: 0px;
