Fix inner container display.

--- a/src/styles/sass/styles.scss
+++ b/src/styles/sass/styles.scss
@@ -106,9 +106,7 @@ h1 {
     width: 100%;
     height: 100%;
     max-width: 1200px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: inline-block;
 }
 #home {
     @include d-flex(column, wrap, center, center);
