--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -331,9 +331,7 @@ h1 {
   width: 100%;
   height: 100%;
   max-width: 1200px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  display: inline-block;
 }
 
 #home {
