--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -248,9 +248,6 @@ html {
 
 body {
   background-color: #4f36e8;
-  display: flex;
-  justify-content: center;
-  height: 100%;
 }
 
 h1 {
@@ -313,7 +310,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0;
+  padding: 6rem 0;
 }
 @media screen and (max-width: 768px) {
   .container {
@@ -329,7 +326,6 @@ h1 {
 
 .inner-container {
   width: 100%;
-  height: 100%;
   max-width: 1200px;
   display: inline-block;
 }
