--- a/src/styles/sass/styles.scss
+++ b/src/styles/sass/styles.scss
@@ -15,9 +15,6 @@ html {
 
 body {
     background-color: $main-blue;
-    display: flex;
-    justify-content: center;
-    height: 100%;
 }
 
 h1 {
@@ -86,7 +83,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
+    padding: 6rem 0;
 
     @media screen and (max-width: 768px) {
         & {
@@ -104,7 +101,6 @@ h1 {
 
 .inner-container {
     width: 100%;
-    height: 100%;
     max-width: 1200px;
     display: inline-block;
 }
