--- a/src/styles/sass/_variables.scss
+++ b/src/styles/sass/_variables.scss
@@ -3,7 +3,11 @@
 // Colors //
 $success-green: #4dda4d;
 $progress-green: #0bdf24;
-$error-red: #ff3f2a; 
+$light-green: #8edf6e;
+$error-red: #ff3f2a;
+$light-orange: #ffa217;
+$dark-violet: #472D30;
+$main-violet: #da8bff; 
 $main-blue: #4f36e8;
 $light-blue: #2DC7FF;
 $main-yellow: #ffc925;
