Add styles for adding-questions form.

--- a/src/styles/sass/styles.scss
+++ b/src/styles/sass/styles.scss
@@ -4,6 +4,7 @@
 @import "./ending-quiz";
 @import "./high-scores";
 @import "./categories";
+@import "./add-question";
 
 * {
     font-size: 62.5%;
