--- a/src/styles/sass/_ending-quiz.scss
+++ b/src/styles/sass/_ending-quiz.scss
@@ -40,7 +40,7 @@
                 border: none;
                 width: 100%;
                 outline: none;
-                border-radius: 16px;
+                border-radius: 1.6rem;
     
                 &::placeholder {
                     color: $light-gray;
