--- a/src/styles/sass/styles.scss
+++ b/src/styles/sass/styles.scss
@@ -21,7 +21,7 @@ body {
 
 h1 {
     margin-top: 0px;
-    font-size: clamp(3rem, 4vw, 5rem);
+    font-size: clamp(2.5rem, 4vw, 5rem);
     color: $white;
     font-weight: 400;
     letter-spacing: 0.2rem;
@@ -91,12 +91,11 @@ h1 {
 }
 
 .container {
-    min-width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 6rem 0;
+    padding: 6rem 2rem;
 
     @media screen and (max-width: 768px) {
         & {
