Add last details for styles and js.

--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -351,6 +351,7 @@ body * {
   padding: 4rem;
   border-radius: 1.6rem;
   background-color: #1d0e77;
+  box-shadow: 0px 10px 20px #2d16bc;
 }
 #add-question label {
   font-size: 2rem;
@@ -406,6 +407,39 @@ body * {
   }
   #add-question label {
     text-align: left;
+  }
+}
+
+.success-alert {
+  margin-top: 2rem;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  gap: 1rem;
+  background: #4dda4d;
+  border-radius: 1.6rem;
+  padding: 2rem 4rem;
+  max-width: max-content;
+  margin: 2rem auto 0 auto;
+}
+.success-alert p, .success-alert i, .success-alert a {
+  font-size: clamp(0.2rem, 5vw, 2.5rem);
+  letter-spacing: 0.5px;
+  color: #104b10;
+  line-height: 120%;
+}
+.success-alert a:hover {
+  text-decoration: none;
+}
+@media screen and (max-width: 768px) {
+  .success-alert {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.8rem;
+    padding: 4rem;
+  }
+  .success-alert i {
+    font-size: 4rem;
   }
 }
 
@@ -498,6 +532,7 @@ h1 {
     flex-direction: column;
     margin: 64px 0;
     padding: 0 10vw;
+    height: 100%;
   }
   .container h1 {
     margin-bottom: 32px;
