--- a/src/styles/sass/styles.scss
+++ b/src/styles/sass/styles.scss
@@ -103,6 +103,7 @@ h1 {
             flex-direction: column;
             margin: $spacing--lg 0;
             padding: 0 10vw;
+            height: 100%;
 
             h1 {
                 margin-bottom: $spacing--md;
