--- a/src/styles/sass/_add-question.scss
+++ b/src/styles/sass/_add-question.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 #add-question {
     @include d-flex(column, nowrap, flex-start, flex-start);
     font-size: clamp(0.4rem,1.6rem,2.5rem);
@@ -6,6 +8,7 @@
     padding: 4rem;
     border-radius: 1.6rem;
     background-color: darken($main-blue, 30%);
+    box-shadow: 0px 10px 20px darken($main-blue, 15%);
 
     label {
         font-size: 2rem;
@@ -69,6 +72,43 @@
             label {
                 text-align: left;
             }
+        }
+    }
+}
+
+.success-alert {
+    margin-top: 2rem;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    gap: 1rem;
+    background: $success-green;
+    border-radius: 1.6rem;
+    padding: 2rem 4rem;
+    max-width: max-content;
+    margin: 2rem auto 0 auto;
+
+    p, i, a {
+        font-size: clamp(0.2rem,5vw,2.5rem);
+        letter-spacing: 0.5px;
+        color: darken($success-green, 40%);
+        line-height: 120%;
+    }
+
+    a {
+        &:hover {
+            text-decoration: none;
+        }
+    }
+
+    @media screen and (max-width: 768px){
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.8rem;
+        padding: 4rem;
+
+        i {
+            font-size: 4rem;
         }
     }
 }
